--- a/operations.html
+++ b/operations.html
@@ -36,6 +36,8 @@
               <br>
               <br>
               <br>
+              <div class="text-5">factorial calculator<br>put the number then refresh the page to find out !<br><input type="text" id="fact"></input><p id="res1" style="color: white; padding: 10px 0; font-size: 200px;"></p> </div>
+<br><br>
             <div class="text-5">digital root calculator<br>put the number then refresh the page to find out !<br><input type="text" id="droot"></input><p id="res" style="color: white; padding: 10px 0; font-size: 200px;"></p> </div>
           </div>
         </div>
