--- a/operations.html
+++ b/operations.html
@@ -15,7 +15,7 @@
     <body class="index">
         <nav class="navbar">
         <div class="logo">
-          <a href="#">Here is some operations you may need ! !<span></span></a>
+          <a href="#">Here are some operations you may need ! !<span></span></a>
         </div>
         <ul class="menu">
             <li><a href="PORTFOLIO.html">Back home</a></li>
